# company-researcher-agent

./: README.md  pyproject.toml
reports/: company_report_20250201_145543.html  company_report_20250201_151244.html  company_report_20250201_152545.html  company_report_20250201_153224.html  company_report_20250201_153917.html
src/company_researcher/: __init__.py  cli.py  config.py  main.py
src/company_researcher/models/: __init__.py  models.py  report.py  response.py
src/company_researcher/modules/ai/: llm.py
src/company_researcher/modules/apis/: lot_funding.py
src/company_researcher/modules/prompts/: career_generator.py  company_description.py  page_type.py
src/company_researcher/reports/: pdf_generator.py
src/company_researcher/reports/templates/: report.html
src/company_researcher/scrapers/: parser.py  scraper.py  worker.py
