[project]
name = "company-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "instructor>=1.7.2",
    "jinja2>=3.1.5",
    "playwright>=1.49.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.4",
    "typer>=0.15.1",
]

[project.scripts]
research = "company_researcher.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
